tests-system/type-qualifiers-3/output
type T4 extends T3 {
     ^^ type-qualifiers-3/foo.rsl:15: issue: consider clarifying that this record is final [clarify_final]
      | Parent record Foo.T3 is final, making this record
      | also final. Marking it explicitly as final
      | clarifies this to casual readers.
type T5 extends T4 {
     ^^ type-qualifiers-3/foo.rsl:19: issue: consider clarifying that this record is final [clarify_final]
      | Parent record Foo.T4 is final, making this record
      | also final. Marking it explicitly as final
      | clarifies this to casual readers.
w Integer
^ type-qualifiers-3/foo.rsl:20: error: cannot declare new components in final record type
Processed 1 model, and 0 requirement files and found 2 warnings and 1 error
